<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">melonDS</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="cancel">Cancel</string>
    <string name="not_set">Not set</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="none">None</string>
    <string name="options">Options</string>
    <string name="preview">Preview</string>
    <string name="undo">Undo</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="play">Play</string>
    <string name="save">Save</string>
    <string name="ellipsis">…</string>
    <string name="navigate_back">Back</string>
    <string name="version_alpha">Alpha</string>
    <string name="version_beta">Beta</string>
    <string name="version_nightly">Nightly</string>
    <string name="console_ds">DS</string>
    <string name="console_dsi">DSi (Experimental)</string>
    <string name="console_ds_full">Nintendo DS</string>
    <string name="console_dsi_full">Nintendo DSi</string>
    <string name="size_bytes">B</string>
    <string name="size_kb">KB</string>
    <string name="size_mb">MB</string>
    <string name="size_gb">GB</string>
    <string name="error_rom_not_found">Could not find ROM</string>
    <string name="error_rom_not_found_info">The ROM you have selected has not been found. Make sure the selected ROM can be found in the current ROM search directory.\n%1$s</string>
    <string name="error_load_rom">Could not load ROM</string>
    <string name="error_load_rom_message">There was a problem loading the ROM. Make sure it\'s not corrupted and try again.</string>
    <string name="error_load_firmware">Could not load the firmware</string>
    <string name="error_load_firmware_message">There was a problem loading the firmware (%1$s). Make sure the BIOS and firmware dump is not corrupted, that the firmware is bootable and try again.</string>
    <string name="error_load_rom_report_issue">An error log was generated that can help fix this problem. Do you want to open an issue on GitHub with this log? You will need a GitHub account.</string>
    <string name="title_emulator_running">Emulator running</string>
    <string name="message_stop_emulation">Stop emulation and load new ROM?</string>
    <string name="error_load_gba_rom">Could not load GBA ROM</string>
    <string name="action_search_roms">Search ROMs</string>
    <string name="action_sort_roms">Sort ROMs</string>
    <string name="action_boot_firmware">Boot firmware</string>
    <string name="action_refresh_rom_list">Refresh ROM list</string>
    <string name="hint_search_roms">Search ROMs…</string>
    <string name="update_available">Update available: %1$s</string>
    <string name="nightly_update_available">Nightly update available</string>
    <string name="nightly_update_available_message">Do you want to download it now?</string>
    <string name="skip_update">Skip</string>
    <string name="remind_later_update">Later</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="starting_download">Starting download…</string>
    <string name="download_progress_sizes">%1$.1fMB/%2$.1fMB</string>
    <string name="update_download_failed">Failed to download update</string>
    <string name="dsiware_manager">DSiWare Manager</string>
    <string name="no_dsiware_titles_installed">You don\'t have any DSiWare title installed</string>
    <string name="dsiware_manager_no_dsi_setup">You haven\'t setup the DSi system</string>
    <string name="dsiware_manager_invalid_dsi_setup">Your DSi system setup is invalid</string>
    <string name="import_dsiware_title">Import DSiWare title</string>
    <string name="dsiware_manager_setup">Setup</string>
    <string name="dsiware_manager_fix_setup">Fix setup</string>
    <string name="dsiware_manager_load_error">There was a problem listing your DSiWare titles. Please check your DSi setup</string>
    <string name="dsiware_manager_import_title_error_open_nand_failed">The NAND could not be opened</string>
    <string name="dsiware_manager_import_title_error_open_file_failed">Error opening selected file</string>
    <string name="dsiware_manager_import_title_error_not_dsiware_title">Not a DSiWare title</string>
    <string name="dsiware_manager_import_title_error_title_already_imported">DSiWare title already imported</string>
    <string name="dsiware_manager_import_title_error_insatll_failed">Failed to install title</string>
    <string name="dsiware_manager_import_title_error_metadat_fetch_failed">Failed to download title metadata. Check your internet connection</string>
    <string name="dsiware_manager_import_title_error_unknown">An unknown error occurred</string>
    <string name="dsiware_manager_import_data">Import data…</string>
    <string name="dsiware_manager_export_data">Export data…</string>
    <string name="dsiware_manager_import_file_success">%1$s imported successfully</string>
    <string name="dsiware_manager_import_file_error">Failed to import file</string>
    <string name="dsiware_manager_export_file_success">%1$s exported successfully</string>
    <string name="dsiware_manager_export_file_error">Failed to export file</string>
    <string name="dsiware_import_from_file">From file</string>
    <string name="dsiware_import_from_rom_list">From ROM list</string>
    <string name="select_dsiware_title">Select DSiWare title</string>
    <string name="no_dsiware_roms_found">No DSiWare ROMs found</string>
    <string name="info_fps">FPS: %1$d</string>
    <string name="info_play_time_hours_minutes">Play time: %1$dh %2$dm</string>
    <string name="info_play_time_minutes">Play time: %1$dm</string>
    <string name="info_loading">LOADING…</string>
    <string name="save_state_slot">%1$s.</string>
    <string name="failed_save_state">Failed to save state</string>
    <string name="failed_load_state">Failed to load state</string>
    <string name="cant_load_empty_slot">Can\'t load an empty save state slot</string>
    <string name="failed_reset_emulation">Failed to reset emulation</string>
    <string name="save_states_not_supported">Save states are not supported while running the firmware</string>
    <string name="save_states_unavailable_ra_hardcore_enabled">Save states are unavailable while Hardcore mode is enabled</string>
    <string name="rewind_time_seconds">%1$ss</string>
    <string name="rewind_time_minutes_seconds">%1$dm%2$ss</string>
    <string name="rewind_not_enabled">Rewind is not enabled</string>
    <string name="rewind_unavailable_ra_hardcore_enabled">Rewind is unavailable while Hardcore mode is enabled</string>
    <string name="no_image_selected">No image selected</string>
    <string name="failed_to_load_image">Failed to load image</string>
    <string name="emulator_stop_gba_mode_unsupported">GBA mode is not supported</string>
    <string name="settings">Settings</string>
    <string name="category_general">General</string>
    <string name="category_general_summary">Theme, generic settings</string>
    <string name="category_roms">ROMs</string>
    <string name="category_roms_summary">Search directory, icon filtering, cache settings</string>
    <string name="category_system">System</string>
    <string name="category_system_summary">Firmware settings, custom BIOS, JIT</string>
    <string name="theme">Theme</string>
    <string name="fast_forward_max_speed">Fast-forward max speed</string>
    <string name="sustained_performance_mode">Sustained performance mode</string>
    <string name="sustained_performance_mode_summary">When enabled, peak performance will be lower but thermal throttling will be less pronounced.</string>
    <string name="rom_icon_filtering">Icon filtering</string>
    <string name="max_rom_cache_size">Max. ROM cache size</string>
    <string name="clear_extracted_rom_cache">Clear extracted ROM cache</string>
    <string name="cache_size_calculating">Cache size: calculating…</string>
    <string name="rom_search_directory">Search directory</string>
    <string name="console_type">Default system</string>
    <string name="internal_firmware_settings">Internal firmware settings</string>
    <string name="internal_firmware_settings_summary">Adjust the settings of the internal firmware.</string>
    <string name="custom_bios_firmware">Custom BIOS and firmware</string>
    <string name="custom_bios_firmware_description">Using a custom BIOS and firmware allows you to launch and navigate in the DS\'s firmware without loading a ROM, just like in a real system</string>
    <string name="bios_directory">DS BIOS directory</string>
    <string name="dsi_bios_directory">DSi BIOS directory</string>
    <string name="show_boot_screen">Show boot screen</string>
    <string name="mac_address">MAC address</string>
    <string name="randomize_mac_address">Randomize MAC address</string>
    <string name="randomize_mac_address_summary">When enabled, a random MAC address is used at every boot. This may cause some games to think its running on a different system and can break time based events.</string>
    <string name="enable_jit">Enable JIT</string>
    <string name="enable_jit_summary">Improves performance but may cause freezes or crashes.</string>
    <string name="category_video">Video</string>
    <string name="category_video_summary">Filter, threaded rendering, FPS counter</string>
    <string name="category_audio">Audio</string>
    <string name="category_audio_summary">Volume, latency, microphone source</string>
    <string name="enable_sound">Enable sound</string>
    <string name="interpolation">Interpolation</string>
    <string name="bitrate">Bitrate</string>
    <string name="volume">Volume</string>
    <string name="audio_latency">Audio latency</string>
    <string name="microphone_source">Microphone source</string>
    <string name="category_save_files">Save Files</string>
    <string name="category_save_files_summary">Save file &amp; save state locations</string>
    <string name="save_next_rom">Save next to ROM file</string>
    <string name="save_file_directory">Save file directory</string>
    <string name="save_state_location">Save state location</string>
    <string name="input">Input</string>
    <string name="input_summary">Key mapping, layouts, haptic feedback</string>
    <string name="key_mapping">Key mapping</string>
    <string name="key_mapping_summary">Assign keys to controller inputs</string>
    <string name="soft_input_behaviour">Soft input behaviour</string>
    <string name="vibrate_on_touch">Vibrate on touch</string>
    <string name="vibration_strength">Vibration strength</string>
    <string name="soft_input_opacity">Soft input opacity</string>
    <string name="enable_rich_presence">Enable rich presence</string>
    <string name="rich_presence_summary">Allows other RetroAchievement users to see what you are playing</string>
    <string name="hardcore_mode">Hardcore mode</string>
    <string name="hardcore_mode_summary">Allows hardcore achievements to be earned. Cheats, save states, slow-motion, and rewind are disabled</string>
    <string name="cheats">Cheats</string>
    <string name="cheats_summary">Enable &amp; import cheat codes</string>
    <string name="firmware_nickname">Nickname</string>
    <string name="firmware_message">Message</string>
    <string name="firmware_language">Language</string>
    <string name="firmware_favourite_colour">Favourite colour</string>
    <string name="firmware_birthday">Birthday</string>
    <string name="add_component">Add component</string>
    <string name="label_size">Size</string>
    <string name="menu">Menu</string>
    <string name="login_with_retro_achievements">Login with RetroAchievements</string>
</resources>